[gd_scene load_steps=2 format=2]

[ext_resource path="res://Escenas/Generador.gd" type="Script" id=1]

[node name="Generador" type="Node"]
script = ExtResource( 1 )

[node name="timer_aparicion" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Punto1" type="Position2D" parent="."]
position = Vector2( 94, -10 )

[node name="Punto5" type="Position2D" parent="."]
position = Vector2( 94, -10 )

[node name="Punto2" type="Position2D" parent="."]
position = Vector2( 201, -11 )

[node name="Punto3" type="Position2D" parent="."]
position = Vector2( 321, -11 )

[node name="Punto4" type="Position2D" parent="."]
position = Vector2( 428, -10 )

[connection signal="timeout" from="timer_aparicion" to="." method="_on_timer_aparicion_timeout"]
